--- a/nav.html
+++ b/nav.html
@@ -62,7 +62,7 @@
             </button>
         </li>
         <li>
-            <button id="settings-button-bottom">
+            <button onclick="goTo('/setting.html')">
                 <i class="fas fa-cog"></i>
                 <span class="nav-label">Nastavení</span>
             </button>
