--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div id="nav-placeholder"></div> <!-- Placeholder pro navigaci -->
 
     <script type="module">
-      import { loadSettings, initializeSettingsModal } from './js/app.js';
+      import { loadSettings, initializeSettingsModal } from '/js/app.js';
 
       // Připojte funkce k objektu window, aby byly globálně dostupné
       window.goTo = function (path) {
