--- a/profile.html
+++ b/profile.html
@@ -174,6 +174,12 @@
             // Inicializace zobrazení profilů
             displayProfiles();
         });
+      import { loadSettings, initializeSettingsModal } from './js/app.js';
+
+      // Připojte funkce k objektu window, aby byly globálně dostupné
+      window.goTo = function (path) {
+        window.location.href = window.location.origin + path;
+      }
     </script>
     <script src="js/nav.js"></script>
 </body>
