--- a/learning.html
+++ b/learning.html
@@ -34,7 +34,7 @@
   </div>
 
   <script type="module">
-    import { loadSettings, initializeSettingsModal, initLearning } from '/js/app.js';
+    import { loadSettings, initializeSettingsModal, initLearning } from './js/app.js';
 
     // Inicializace nastavení, modal okna a Learning Mode
     document.addEventListener('DOMContentLoaded', () => {
@@ -52,7 +52,7 @@
       }
     });
   </script>
-  <script src="js/nav.js"></script>
+  <script src="./js/nav.js"></script>
 </body>
 
 </html>
