--- a/setting.html
+++ b/setting.html
@@ -19,7 +19,7 @@
       </div>
       
     <script type="module">
-      import { loadSettings, initializeSettingsModal } from '../js/app.js';
+      import { loadSettings, initializeSettingsModal } from 'js/app.js';
 
       // Připojte funkce k objektu window, aby byly globálně dostupné
       window.goTo = function (path) {
