--- a/statistics.html
+++ b/statistics.html
@@ -41,8 +41,8 @@
   </script>
 
   <script type="module">
-    import { loadProfiles } from './js/profiles.js';
-    import { getCurrentProfile } from './js/profiles.js';
+    import { loadProfiles } from 'js/profiles.js';
+    import { getCurrentProfile } from 'js/profiles.js';
 
     document.addEventListener('DOMContentLoaded', () => {
       const statisticsContainer = document.getElementById('statistics-container');
