--- a/profile.html
+++ b/profile.html
@@ -276,7 +276,7 @@
     <div class="container">
         <div id="nav-placeholder"></div> <!-- Placeholder pro navigaci -->
 
-        <h1>Správa Profilů</h1>
+        <h1>Aktivní profil: </h1>
 
         <!-- Sekce pro aktuální profil -->
         <div class="current-profile">
